# madj2

./: .gitmodules  CMakeLists.txt
cmake/: cmake-macros.cmake  cmake-tools.cmake  libs-alsa.cmake  libs-aubio.cmake  libs-bento4.cmake  libs-boost.cmake  libs-cegui.cmake  libs-ffmpeg.cmake  libs-ffms.cmake  libs-glew.cmake  libs-glfw.cmake  libs-ladspa.cmake  libs-leapmotion.cmake  libs-opengl.cmake  libs-portaudio.cmake  libs-portmidi.cmake  libs-pulse.cmake  libs-sdl2.cmake
data/: config.json
data/cegui/: GWEN.project  madj.project  tracker-video.xml
data/cegui/fonts/: DroidSansMono-10.font
data/cegui/imagesets/: GWEN.imageset  madj.imageset
data/cegui/layouts/: screen.layout  tracker-file.layout  tracker-story.layout  tracker-tempo.layout  tracker-video.layout  tracker-video2.layout  tracker-window.layout
data/cegui/looknfeel/: GWEN.looknfeel  madj.looknfeel
data/cegui/schemes/: GWEN.scheme  madj.scheme
data/shader/: effect-zoombox-fragment.glsl  effect-zoombox-vertex.glsl  fragment-color.glsl  fragment-mirror-both.glsl  fragment-mirror-hori.glsl  fragment-mirror-vert.glsl  fragment-stripes-diag.glsl  fragment-stripes-hori.glsl  fragment-stripes-vert.glsl  fragment-texture.glsl  program.list  vertex-direct-2d.glsl  vertex-ortho-2d.glsl
source/: CMakeLists.txt  ao_pulse.cpp  ao_pulse.h  cmake.hpp.in  config.cpp  config.hpp  context.cpp  context.hpp  ff_file.cpp  ff_file.h  ff_file_audio.cpp  ff_file_audio.h  ff_file_track.h  ff_file_video.cpp  ff_file_video.h  global.cpp  global.hpp  io_main.cpp  io_main.h  io_midi.cpp  io_midi.h  main.cpp  mj_cmake.h.in  mj_config.cpp  mj_config.h  mj_context.cpp  mj_context.h  mj_global.cpp  mj_global.h  mj_main.cpp  mj_time.h  mm_main.cpp  mm_main.h  time.hpp  timer.hpp  vo_context.h  vo_image.cpp  vo_image.h  vo_main.h  vo_opengl.h  (+10 more)
source/audio/: source.cpp  source.hpp  tempodetect.cpp  tempodetect.hpp
source/controller/: controller.cpp  controller.hpp  device.hpp  leapmotion.cpp  leapmotion.hpp  midi.cpp  midi.hpp  midi2.cpp  midi2.hpp  ohmrgb.cpp  ohmrgb.hpp  tempo.cpp  tempo.hpp
source/effects/: effects.cpp  effects.hpp  framing.cpp  framing.hpp
source/media/: file.cpp  file.hpp  file_ffms.cpp  file_ffms.hpp  file_ffst.cpp  file_ffst.hpp  file_mjv.cpp  file_mjv.hpp  file_mjv_track.hpp  file_mjv_video.cpp  file_mjv_video.hpp  file_mp4.cpp  file_mp4.hpp  file_srt.cpp  file_srt.hpp  media.cpp  media.hpp  work.cpp  work.hpp
source/opengl/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  framing.cpp  framing.hpp  image.cpp  image.hpp  opengl.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp  vertex.cpp  vertex.hpp
source/video/: context.hpp  scancode.cpp  scancode.hpp  screen.cpp  screen.hpp  screen_glfw.cpp  screen_glfw.hpp  tracker.cpp  tracker.hpp  tracker_file.cpp  tracker_file.hpp  tracker_story.cpp  tracker_story.hpp  tracker_tempo.cpp  tracker_tempo.hpp  video.hpp  view.cpp  view.hpp
